--- a/CodeYugam/FrontEnd/src/Pages/Home.css
+++ b/CodeYugam/FrontEnd/src/Pages/Home.css
@@ -6,7 +6,7 @@
     padding:0;
 }
 body{
-    background-color: black;
+    /* background-color: black; */
     font-family: 'EB Garamond','sans-serif';
 }
 .Home{
@@ -15,13 +15,8 @@ body{
     align-items: center;
     height:100vh;
     margin:10px;
+    background-color: #F2F2F2;
 }
-/* .borderDiv{
-    border-color: white;
-    height:90vh;
-    width:500px;
-    padding:20px;
-} */
 .loginCard{
     display: flex;
     flex-direction: column;
@@ -33,7 +28,8 @@ body{
     align-items:center;
     border-radius: 5%;
     /* box-shadow: 5px 5px 5px rgb(177, 8, 8); */
-    background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+    /* background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12); */
+    background-color: #A6A6A6;
 }
 .Heading 
 {
@@ -41,7 +37,7 @@ body{
     font-size: 40px;
     padding:20px;
     /* Rectangle 3 */
-    
+    color:black;
     background-color: linear-gradient(180deg, rgba(0, 32, 146, 0.56) 33.4%, rgba(225, 5, 5, 0.56) 100%);
 
 }
@@ -81,4 +77,8 @@ input{
     color: linear-gradient(180deg, rgba(0, 32, 146, 0.56) 33.4%, rgba(225, 5, 5, 0.56) 100%); */
     background: black;
 color:white;
+}
+.headRow
+{
+    margin-bottom: 20px;
 }
