--- a/CodeYugam/FrontEnd/src/Pages/Profile.css
+++ b/CodeYugam/FrontEnd/src/Pages/Profile.css
@@ -55,6 +55,7 @@ body{
 .singleBill tr{
     position: sticky;
     width: 100%;
+    height: 40px;
     /* background-color: green; */
     display: flex;
     justify-content: space-around;
@@ -74,7 +75,7 @@ body{
     width: 100%;
     text-align: center;
     margin: 1px;
-    height:6vh;
+    /* height:6vh; */
 }
 
 .headRow{
@@ -82,10 +83,15 @@ body{
 }
 
 .scroll_area{
+    /* height: 100%; */
     width: 100%;
+    height: 100%;
     overflow-y: scroll;
     /* background-color: green; */
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    /* justify-content: space-around; */
+    justify-content: start;
+    /* align-items: start; */
+
 }
