--- a/CodeYugam/FrontEnd/src/Pages/Profile.css
+++ b/CodeYugam/FrontEnd/src/Pages/Profile.css
@@ -98,3 +98,14 @@ body{
 .payBttn{
     border-radius: 10px;
 }
+.payBtn
+{
+    border-radius: 15px;
+    width:6vw;
+    height: 5vh;
+}
+.payBtn:hover{
+    background-color: black;
+    color:white;
+    border-color: white;
+}
