--- a/CodeYugam/FrontEnd/src/Pages/Payment.css
+++ b/CodeYugam/FrontEnd/src/Pages/Payment.css
@@ -5,7 +5,7 @@
 }
 body
 {
-    background-color: white;
+    background-color: rgb(111, 106, 106);
     color:black;
-    background-image:none;
+    
 }
